--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "rtree"
 version = "0.1.0"
-authors = ["Albert Nikulshin <nox-wave@yandex-team.ru>"]
+authors = ["Albert Nikulshin <gotodno@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/Peccansy/rtree"
 
 [dependencies]
